fixed logout button

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -80,7 +80,7 @@
                         <% end %>
                     <% end %>
 
-                            <li>  <%=  link_to "/logout" do %>
+                            <li>  <%=  link_to "/logout", method: :delete do %>
                             <span class="fa fa-sign-out"></span> Log out</span>
                             <% end %>
 
