fixed mobile layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,10 @@ src="https://credit.j-payment.co.jp/gateway/js/CPToken.js"></script>
 
 
 
-<script src="jquery.min.js" type="text/javascript"></script>
-<script src="mosaic.1.0.1.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+<!-- <script src="mosaic.1.0.1.js" type="text/javascript"></script> -->
 <script type="text/javascript">
-$(document).ready(function($){
+/*$(document).ready(function($){
 $('.fade').mosaic();
 $('.bar').mosaic({
 animation:'slide'
@@ -62,7 +62,7 @@ animation:'slide',
 hover_x:'400px',
 hover_y:'300px'
 });
-});
+});*/
 </script>
 
 
@@ -72,7 +72,7 @@ hover_y:'300px'
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <%= csrf_meta_tags %>
   
-  <script src="js/load-image.all.min.js"></script>
+  <!-- <script src="js/load-image.all.min.js"></script> -->
   
 
   
