--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 
 @import "bootstrap";
 @import "layouts/_paginate.scss";
+@import 'bootstrap-datetimepicker';
 
 body {
   -webkit-text-size-adjust : 100%!important ;
