--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <% if logged_in? %>
 <div id="app" class="container-fullwidth" style="margin:20px 10% 0 10%;">
-<nav class="navbar navbar-expand-lg">
-
+      <nav class="navbar navbar-expand-lg navbar-default navbar-fixed-top">
+            
                 <a class="navbar-brand" href="/">
-                <img src="../../../timee-logo.jpg" class="img img-responsive" width="200px;">
+                <img src="../../../timee-logo.jpg" class="img img-responsive" width="200px;" height="50px;">
                 <p style="font-family: 'Work Sans', sans-serif, cursive; font-size:12px;">
                 There is always time to LEARN!</p>
                 </a>
-
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="true">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>    
+                </button>
                 <% unless current_user.type_user == "teacher"%>
                     　<ul style=" float:left; color:black; margin:35px 50px 0 0; width:150px;" >
                         <li>
@@ -33,7 +38,7 @@
                       </ul>
                 <% end %>
      
-                <div id="navbarNavDropdown" class="navbar-collapse collapse">
+                <div id="navbarNavDropdown" class="collapse navbar-collapse">
                     
                     <ul class="nav navbar-nav navbar-right" style="font-family: 'Work Sans', sans-serif;">
                         
