--- a/app/views/users/edit3.html.erb
+++ b/app/views/users/edit3.html.erb
@@ -2,7 +2,7 @@
 <div class="container" style="padding:0 3% 0 3% ;">
  
 
-<h2 style=" font-family: 'Work Sans', sans-serif;" >Charge <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">タイムをチャージ</span></h2>
+<h2 style=" font-family: 'Work Sans', sans-serif;" >Purchase Credits <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">タイムをチャージ</span></h2>
 <br>
 
 
@@ -15,32 +15,35 @@ window.name = "xsz";
 //-->
 </SCRIPT>
 
-<div style="margin:0 3% 0 3%; width:100%;">
+<div class="container-fluid">
+<div class="row">
 
-<a href="/purchase10" style="color:white;">
-<button class="btn btn-lg btn-success col-md-5 col-xs-5" style="margin: 0 20px 0 20px; width:200px; height:200px; float:left;" name="time">
-<span style=" font-family: ten-mincho, serif; font-style: normal; font-weight: 100;"><span style=" font-size: 30px;">10</span> 分<br><small style="font-size:7px;">( 300 yen )</small></span>
-</button>
+<div class="col-md-3">
+<a href="/purchase10">
+<img src="/10mins.png" class="img img-responsive">
 </a>
+</div>
 
-<a href="/purchase60" style="color:white;">
-<button class="btn btn-lg btn-success col-md-5 col-xs-5" style="margin: 0 20px 0 20px; width:200px; height:200px; float:left;" name="time">
-<span style=" font-family: ten-mincho, serif; font-style: normal; font-weight: 100;"><span style=" font-size: 30px;">1</span> 時間<br><small style="font-size:7px;">( 1,300 yen )</small></span>
-</button>
+<div class="col-md-3">
+<a href="/purchase60">
+<img src="/1hr.png" class="img img-responsive">
 </a>
+</div>
 
-<a href="/purchase180" style="color:white;">
-<button class="btn btn-lg btn-success col-md-5 col-xs-5" style="margin: 0 20px 0 20px; width:200px; height:200px; float:left;" name="time">
-<span style=" font-family: ten-mincho, serif; font-style: normal; font-weight: 100;"><span style=" font-size: 30px;">3</span> 時間<br><small style="font-size:7px;">( 3,300 yen )</small></span>
-</button>
+<div class="col-md-3">
+<a href="/purchase180">
+<img src="/3hrs.png" class="img img-responsive" style="margin-top: -30px">
 </a>
+</div>
 
-<a href="/purchase600" style="color:white;">
-<button class="btn btn-lg btn-success col-md-5 col-xs-5" style="margin: 0 20px 0 20px; width:200px; height:200px; float:left;" name="time">
-<span style=" font-family: ten-mincho, serif; font-style: normal; font-weight: 100;"><span style=" font-size: 30px;">10</span> 時間<br><small style="font-size:7px;">( 10,000 yen )</small></span>
-</button>
+<div class="col-md-3">
+<a href="/purchase600">
+<img src="/10hrs.png" class="img img-responsive" style="margin-top: -30px">
 </a>
+</div>
 </div>
 <a type="button" class="btn col-md-offset-1 col-md-5 col-xs-offset-1 " style=" margin:50px 30% 20px 30%; color:black;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
 </div>
+</div>
+
 <div style="clear: both;"> </div>
