--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,51 +1,209 @@
 <% provide(:title, "新規会員登録") %>
-<div class="container">
- 
- <h3>新規会員登録</h3>
-  <div class="col-md-6">
-   
-   
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_message', object: f.object %>
 
-  <br>
-     <%= f.label :ニックネーム %>
-      <%#= f.label :name %>
-     <b style="color:red;">*</b>
-      <%= f.text_field :name, class: 'form-control' %>
-  <br>
-     <%= f.label :メールアドレス %>
-      <%#= f.label :email %>
-     <b style="color:red;">*</b>
-      <%= f.email_field :email, class: 'form-control' %>
-  <br>
-     <%= f.label :パスワード %>
-      <%#= f.label :password %>
-     <b style="color:red;">*</b>
-      <%= f.password_field :password, class: 'form-control' %>
-<!-- -- --> 
-  <br>
-     <%= f.label :確認用パスワード %>
-     <b style="color:red;">*</b>
-      <%#= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-<!-- -- --> 
-  <br>
-     <%= f.label :スカイプID %>
-      <%#= f.label :password_confirmation, "Confirmation" %>
-      <%= f.text_field :skype, class: 'form-control' %>
-<!-- -- --> 
-  <br>
-<%#= f.label :管理者権限 %>
-<%#= f.check_box 'admin', {}, true, false %>
-<br><br>
-     
-<%= f.hidden_field :time, :value => 30 %>
-<%= f.hidden_field :type_user, :value => "student" %>
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+  </div>
 
-      <%= f.submit "変更する", class: "btn btn-primary", name: "new" %>
-    <% end %>
-    
-    
+<style>
+
+
+#playground-container {
+    height: 500px;
+    overflow: hidden !important;
+    -webkit-overflow-scrolling: touch;
+}
+.bg {
+  background:url('/bg.jpg');
+  font-family: 'Oxygen', sans-serif;
+
+}
+
+.main{
+  margin:50px 15px;
+}
+
+h1.title { 
+  font-size: 50px;
+  font-family: 'Passion One', cursive; 
+  font-weight: 400; 
+}
+
+hr{
+  width: 10%;
+  color: #fff;
+}
+
+.form-group{
+  margin-bottom: 15px;
+}
+
+label{
+  margin-bottom: 15px;
+}
+
+input,
+input::-webkit-input-placeholder {
+    font-size: 11px;
+    padding-top: 3px;
+}
+
+.main-login{
+  background-color: #fff;
+    /* shadows and rounded borders */
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+
+}
+.form-control {
+    height: auto!important;
+padding: 8px 12px !important;
+}
+.input-group {
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
+}
+#button {
+    border: 1px solid #ccc;
+    margin-top: 28px;
+    padding: 6px 12px;
+    color: #666;
+    text-shadow: 0 1px #fff;
+    cursor: pointer;
+    -moz-border-radius: 3px 3px;
+    -webkit-border-radius: 3px 3px;
+    border-radius: 3px 3px;
+    -moz-box-shadow: 0 1px #fff inset, 0 1px #ddd;
+    -webkit-box-shadow: 0 1px #fff inset, 0 1px #ddd;
+    box-shadow: 0 1px #fff inset, 0 1px #ddd;
+    background: #f5f5f5;
+    background: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #eeeeee));
+    background: -webkit-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    background: -o-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    background: -ms-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    background: linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#eeeeee', GradientType=0);
+}
+.main-center{
+  margin-top: 30px;
+/*  margin: 0 auto;
+  max-width: 400px;*/
+    padding: 10px 40px;
+
+  background:#009edf;
+      color: #FFF;
+    text-shadow: none;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+
+}
+span.input-group-addon i {
+    color: #009edf;
+    font-size: 17px;
+}
+
+.login-button{
+  margin-top: 5px;
+}
+
+.login-register{
+  font-size: 11px;
+  text-align: center;
+}
+
+</style>
+<div class="bg">
+    <div class="container">
+      <div class="row main">
+        <div class="col-md-12">
+        <div class="main-login main-center col-md-offset-3 col-md-6">
+        <h2 class="text-center">新規会員登録</h2>
+        <h5>Sign up now ang get free 30 minutes credits for Timee ESL Classes</h5>
+        <%= form_for(@user) do |f| %>
+            
+            <div class="form-group">
+              <label for="name" class="cols-md-2 control-label">ニックネーム</label>
+              <div class="cols-md-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                   <%= f.text_field :name, class: 'form-control', :placeholder => 'ニックネーム' %>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="email" class="cols-md-2 control-label">メールアドレス</label>
+              <div class="cols-md-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                  <%= f.email_field :email, class: 'form-control', :placeholder => 'メールアドレス' %>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="username" class="cols-md-2 control-label">スカイプID</label>
+              <div class="cols-md-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-skype" aria-hidden="true"></i></span>
+                  <%= f.text_field :skype, class: 'form-control', :placeholder => 'スカイプID' %>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="password" class="cols-md-2 control-label">パスワード</label>
+              <div class="cols-md-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                   <%= f.password_field :password, class: 'form-control', :placeholder => 'パスワード' %>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="confirm" class="cols-md-2 control-label">確認用パスワード</label>
+              <div class="cols-md-10">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                  <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード' %>
+                </div>
+              </div>
+            </div>
+
+            <%= f.hidden_field :time, :value => 30 %>
+            <%= f.hidden_field :type_user, :value => "student" %>
+
+            <div class="form-group">
+            <%= f.submit "変更する", class: "btn btn-primary btn-block btn-lg", name: "new" %>
+            </div>
+            
+          </form>
+        </div>
+
+<!--         <div class="col-md-offset-1 col-md-6">
+
+        <img src="main.jpg" class="img img-thumbnail" style="margin-top: 150px;">
+
+        </div> -->
+      </div>
+      </div>
+    </div>
+
+     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+</div>
+
+<% end %>
+
   </div>
 </div>
