--- a/app/views/users/edit3.html.erb
+++ b/app/views/users/edit3.html.erb
@@ -42,7 +42,10 @@ window.name = "xsz";
 </a>
 </div>
 </div>
-<a type="button" class="btn col-md-offset-1 col-md-5 col-xs-offset-1 " style=" margin:50px 30% 20px 30%; color:black;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
+
+<div class="col-md-offset-3 col-md-6 col-xs-12">
+<a type="button" class="btn" style="color: #000; width: 100%; margin-top: 30px;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
+
 </div>
 </div>
 
