--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -125,7 +125,6 @@ span.input-group-addon i {
         <div class="col-md-12">
         <div class="main-login main-center col-md-offset-3 col-md-6">
         <h2 class="text-center">新規会員登録</h2>
-        <h5>Sign up now ang get free 30 minutes credits for Timee ESL Classes</h5>
         <%= form_for(@user) do |f| %>
             
             <div class="form-group">
@@ -182,7 +181,7 @@ span.input-group-addon i {
             <%= f.hidden_field :type_user, :value => "student" %>
 
             <div class="form-group">
-            <%= f.submit "変更する", class: "btn btn-primary btn-block btn-lg", name: "new" %>
+            <%= f.submit "登録する", class: "btn btn-primary btn-block btn-lg", name: "new", :value => "登録する" %>
             </div>
             
           </form>
@@ -197,10 +196,6 @@ span.input-group-addon i {
       </div>
     </div>
 
-     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
 </div>
 
 <% end %>
