--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,10 @@
   <title><%= full_title(yield(:title))%></title>
   <!--ヘルパーに設定必要-->
   <meta name="viewport" content="width=300" >
-  <script src="https://rawgit.com/sitepoint-editors/jsqrcode/master/src/qr_packed.js">
+ <!--  <script src="https://rawgit.com/sitepoint-editors/jsqrcode/master/src/qr_packed.js"> -->
 </script>
 
-
-
-
-
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Audiowide');
 </style>
@@ -23,19 +19,10 @@
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Work+Sans:200" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://tympanus.net/Development/HoverEffectIdeas/fonts/font-awesome-4.2.0/css/font-awesome.min.css" />
 
-<script type="text/javascript"
-src="https://credit.j-payment.co.jp/gateway/js/jquery.js"></script> <script type="text/javascript"
-src="https://credit.j-payment.co.jp/gateway/js/CPToken.js"></script>
-
-
-
-
-
-
-
 <script src="jquery.min.js" type="text/javascript"></script>
 <script src="mosaic.1.0.1.js" type="text/javascript"></script>
 <script type="text/javascript">
+
 $(document).ready(function($){
 $('.fade').mosaic();
 $('.bar').mosaic({
@@ -65,17 +52,13 @@ hover_y:'300px'
 });
 </script>
 
-
-
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <%= csrf_meta_tags %>
   
-  <script src="js/load-image.all.min.js"></script>
-  
-
-  
+  <!-- <script src="js/load-image.all.min.js"></script> -->
+ 
 </head>
 <body>
   
