--- a/app/views/users/edit5.html.erb
+++ b/app/views/users/edit5.html.erb
@@ -1,3 +1,6 @@
+<script type="text/javascript" src="https://credit.j-payment.co.jp/gateway/js/jquery.js"></script> 
+<script type="text/javascript" src="https://credit.j-payment.co.jp/gateway/js/CPToken.js"></script>
+
 <center>
 <div class="container" style="padding:0 0 0 0 ;">
  
