fixed login mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -758,7 +758,7 @@ max-width:600px; text-align:center;
   margin: 0 !important;
     }
 .form-control {
-  width: 115% !important;
+ /* width: 115% !important; */
   }
 }
 
