--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,28 +5,41 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
   </div>
 
+<div class="col-md-offset-1 col-md-6">
+  <img src="timee-logo.jpg" class="img img-responsive" style="width: 100px">
+</div>
+
 <style>
 
+@media only screen and (max-width: 600px) {
 
-#playground-container {
-    height: 500px;
-    overflow: hidden !important;
-    -webkit-overflow-scrolling: touch;
+.pleft {
+  padding-left: 10px !important;
+  }
+
+.mmobile {
+  margin-top: 30px;
 }
+
+ .nopadding {
+  padding: 0;
+  margin-top: 0 !important;
+
+ }
+
+ .main-center {
+  padding: 10px 10px !important;
+ }
+} 
+
 .bg {
   background:url('/bg.jpg');
   font-family: 'Oxygen', sans-serif;
 
 }
-
+  
 .main{
   margin:50px 15px;
-}
-
-h1.title { 
-  font-size: 50px;
-  font-family: 'Passion One', cursive; 
-  font-weight: 400; 
 }
 
 hr{
@@ -61,35 +74,14 @@ input::-webkit-input-placeholder {
 }
 .form-control {
     height: auto!important;
-padding: 8px 12px !important;
+/*padding: 8px 12px !important;*/
 }
 .input-group {
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
 }
-#button {
-    border: 1px solid #ccc;
-    margin-top: 28px;
-    padding: 6px 12px;
-    color: #666;
-    text-shadow: 0 1px #fff;
-    cursor: pointer;
-    -moz-border-radius: 3px 3px;
-    -webkit-border-radius: 3px 3px;
-    border-radius: 3px 3px;
-    -moz-box-shadow: 0 1px #fff inset, 0 1px #ddd;
-    -webkit-box-shadow: 0 1px #fff inset, 0 1px #ddd;
-    box-shadow: 0 1px #fff inset, 0 1px #ddd;
-    background: #f5f5f5;
-    background: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #eeeeee));
-    background: -webkit-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
-    background: -o-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
-    background: -ms-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
-    background: linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#eeeeee', GradientType=0);
-}
+
 .main-center{
   margin-top: 30px;
 /*  margin: 0 auto;
@@ -116,22 +108,29 @@ span.input-group-addon i {
 .login-register{
   font-size: 11px;
   text-align: center;
+
+.nomargin {
+  margin: 0 !important;
+  padding: 0 !important;
+  }
 }
 
 </style>
-<div class="bg">
-    <div class="container">
+
+<div class="bg nopadding">
+    <div class="container nopadding">
       <div class="row main">
         <div class="col-md-12">
         <div class="main-login main-center col-md-offset-3 col-md-6">
-        <h2 class="text-center">新規会員登録</h2>
+        <h2 class="text-center hidden-xs">新規会員登録</h2>
+        <h3 class="text-center hidden-md hidden-sm hidden-lg">新規会員登録</h3>
         <%= form_for(@user) do |f| %>
             
             <div class="form-group">
               <label for="name" class="cols-md-2 control-label">ニックネーム</label>
               <div class="cols-md-10">
                 <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                    <%= f.text_field :name, class: 'form-control', :placeholder => 'ニックネーム' %>
                 </div>
               </div>
@@ -141,7 +140,7 @@ span.input-group-addon i {
               <label for="email" class="cols-md-2 control-label">メールアドレス</label>
               <div class="cols-md-10">
                 <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
                   <%= f.email_field :email, class: 'form-control', :placeholder => 'メールアドレス' %>
                 </div>
               </div>
@@ -151,7 +150,7 @@ span.input-group-addon i {
               <label for="username" class="cols-md-2 control-label">スカイプID</label>
               <div class="cols-md-10">
                 <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-skype" aria-hidden="true"></i></span>
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-skype" aria-hidden="true"></i></span>
                   <%= f.text_field :skype, class: 'form-control', :placeholder => 'スカイプID' %>
                 </div>
               </div>
@@ -161,7 +160,7 @@ span.input-group-addon i {
               <label for="password" class="cols-md-2 control-label">パスワード</label>
               <div class="cols-md-10">
                 <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
                    <%= f.password_field :password, class: 'form-control', :placeholder => 'パスワード' %>
                 </div>
               </div>
@@ -171,7 +170,7 @@ span.input-group-addon i {
               <label for="confirm" class="cols-md-2 control-label">確認用パスワード</label>
               <div class="cols-md-10">
                 <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
                   <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード' %>
                 </div>
               </div>
